--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -185,3 +185,6 @@ mark_taitanzhihu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/
 mark_heianwuzhi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3167.png'
 mark_yingfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3168.png'
 mark_buxieanguang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4021.png'
+mark_shandianshoushu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4012.png'
+mark_shandianluoyin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3145.png'
+mark_xudian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3144.png'
