--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -1,17 +1,17 @@
 # 埃鲁系列技能音效
-skill_fusudadi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_1_001.mp3'
-skill_silieshabao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_2_001.mp3'
-skill_julidadi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_1_002.mp3'
-skill_lirenshabao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_2_002.mp3'
-skill_paoxiaonuhou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_3_001.mp3'
-skill_jinghuadadi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_1_001.mp3'
-skill_nixishabao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_2_001.mp3'
-skill_zhandounuhou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_3_001.mp3'
-skill_taitanzhinu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/11321.mp3'
-skill_fuchoudadi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_1_001.mp3'
-skill_huimieshabao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_2_002.mp3'
-skill_xiezuojieli: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_3_001.mp3'
-skill_taitanzhihu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_3_003.mp3'
+skill_fusudadi: 'https://seer2-resource.yuuinih.com/sound/skill/09_1_001.mp3'
+skill_silieshabao: 'https://seer2-resource.yuuinih.com/sound/skill/09_2_001.mp3'
+skill_julidadi: 'https://seer2-resource.yuuinih.com/sound/skill/09_1_002.mp3'
+skill_lirenshabao: 'https://seer2-resource.yuuinih.com/sound/skill/09_2_002.mp3'
+skill_paoxiaonuhou: 'https://seer2-resource.yuuinih.com/sound/skill/09_3_001.mp3'
+skill_jinghuadadi: 'https://seer2-resource.yuuinih.com/sound/skill/09_1_001.mp3'
+skill_nixishabao: 'https://seer2-resource.yuuinih.com/sound/skill/09_2_001.mp3'
+skill_zhandounuhou: 'https://seer2-resource.yuuinih.com/sound/skill/09_3_001.mp3'
+skill_taitanzhinu: 'https://seer2-resource.yuuinih.com/sound/skill/11321.mp3'
+skill_fuchoudadi: 'https://seer2-resource.yuuinih.com/sound/skill/09_1_001.mp3'
+skill_huimieshabao: 'https://seer2-resource.yuuinih.com/sound/skill/09_2_002.mp3'
+skill_xiezuojieli: 'https://seer2-resource.yuuinih.com/sound/skill/09_3_001.mp3'
+skill_taitanzhihu: 'https://seer2-resource.yuuinih.com/sound/skill/09_3_003.mp3'
 skill_paida: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_002.mp3'
 skill_shuipao: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_003.mp3'
 skill_tuoli: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_001.mp3'
@@ -531,47 +531,63 @@ skill_huiyizhongxian: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.m
 skill_fenshenshu: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_002.mp3'
 skill_tiankongliechong: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
 skill_tiankongzhiwu: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
-skill_fushihuafen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_002.mp3'
-skill_xuruohuafen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_003.mp3'
-skill_dufentuxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_1_002.mp3'
-skill_dufenchongji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_1_003.mp3'
-skill_yingguanghuafen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_003.mp3'
-skill_mabidufeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_001.mp3'
-skill_shuimiandufeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_002.mp3'
-skill_huandielianji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_1_003.mp3'
-skill_huafenmiman: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_3_002.mp3'
-skill_huanmiediewu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/11130.mp3'
-skill_fushidufeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_003.mp3'
-skill_xuruodufeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_001.mp3'
-skill_huandiedusha: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_002.mp3'
-skill_huandiemiwu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_3_003.mp3'
-skill_nuzhua: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_001.mp3'
-skill_baolongzhan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
-skill_longlinjia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_002.mp3'
-skill_huolongtuxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
-skill_shixuedaji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
-skill_julongzhita: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_003.mp3'
-skill_longzhinu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_001.mp3'
-skill_bomingbaoji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_001.mp3'
-skill_pojiachuanji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
-skill_hongliannulongzhan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10858.mp3'
-skill_longdeliliang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_003.mp3'
-skill_kuanglongzhuilie: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_003.mp3'
-skill_huolongdetiequan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
-skill_huolongdepaoxiao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_001.mp3'
-skill_yingxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_001.mp3'
-skill_anhua: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_002.mp3'
-skill_anxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
-skill_anti: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_001.mp3'
-skill_anci: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
-skill_yemu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_002.mp3'
-skill_anyan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_001.mp3'
-skill_bianpaozhalei: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
-skill_anzhiguang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_003.mp3'
-skill_anzhishang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_001.mp3'
-skill_anzhishui: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
-skill_anyeshisha: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10983.mp3'
-skill_zhiheiyi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
-skill_anzhiyi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
-skill_yingfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
-skill_yijieheian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_002.mp3'
+skill_fushihuafen: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_002.mp3'
+skill_xuruohuafen: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_003.mp3'
+skill_dufentuxi: 'https://seer2-resource.yuuinih.com/sound/skill/06_1_002.mp3'
+skill_dufenchongji: 'https://seer2-resource.yuuinih.com/sound/skill/06_1_003.mp3'
+skill_yingguanghuafen: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_003.mp3'
+skill_mabidufeng: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_001.mp3'
+skill_shuimiandufeng: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_002.mp3'
+skill_huandielianji: 'https://seer2-resource.yuuinih.com/sound/skill/06_1_003.mp3'
+skill_huafenmiman: 'https://seer2-resource.yuuinih.com/sound/skill/06_3_002.mp3'
+skill_huanmiediewu: 'https://seer2-resource.yuuinih.com/sound/skill/11130.mp3'
+skill_fushidufeng: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_003.mp3'
+skill_xuruodufeng: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_001.mp3'
+skill_huandiedusha: 'https://seer2-resource.yuuinih.com/sound/skill/06_2_002.mp3'
+skill_huandiemiwu: 'https://seer2-resource.yuuinih.com/sound/skill/06_3_003.mp3'
+skill_nuzhua: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_baolongzhan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_longlinjia: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_huolongtuxi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_shixuedaji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_julongzhita: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_longzhinu: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_bomingbaoji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_pojiachuanji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_hongliannulongzhan: 'https://seer2-resource.yuuinih.com/sound/skill/10858.mp3'
+skill_longdeliliang: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_kuanglongzhuilie: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_huolongdetiequan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_huolongdepaoxiao: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_yingxi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_anhua: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_anxi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_anti: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_anci: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_yemu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_anyan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_bianpaozhalei: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_anzhiguang: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_anzhishang: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_anzhishui: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_anyeshisha: 'https://seer2-resource.yuuinih.com/sound/skill/10983.mp3'
+skill_zhiheiyi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_anzhiyi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_yingfeng: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_yijieheian: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_leidian: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_001.mp3'
+skill_julei: 'https://seer2-resource.yuuinih.com/sound/skill/08_3_002.mp3'
+skill_shandiandashe: 'https://seer2-resource.yuuinih.com/sound/skill/08_1_002.mp3'
+skill_dianguanghuoshi: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_003.mp3'
+skill_leiguangshan: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_002.mp3'
+skill_leiguangqiu: 'https://seer2-resource.yuuinih.com/sound/skill/08_3_002.mp3'
+skill_xudian: 'https://seer2-resource.yuuinih.com/sound/skill/08_1_003.mp3'
+skill_tianleiji: 'https://seer2-resource.yuuinih.com/sound/skill/08_3_003.mp3'
+skill_shandianshoushu: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_002.mp3'
+skill_shandianzhilian: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_001.mp3'
+skill_shandianzhongji: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_002.mp3'
+skill_dianshanleiming: 'https://seer2-resource.yuuinih.com/sound/skill/10844.mp3'
+skill_shandianluoyin: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_003.mp3'
+skill_shandianchongji: 'https://seer2-resource.yuuinih.com/sound/skill/08_1_003.mp3'
+skill_dianguangchongji: 'https://seer2-resource.yuuinih.com/sound/skill/08_1_002.mp3'
+skill_tianleijiangling: 'https://seer2-resource.yuuinih.com/sound/skill/08_1_001.mp3'
