--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -885,3 +885,13 @@
     configKey: effect_mark_reduce_accuracy_5_per_stack.reduce_accuracy_per_stack
     modifierType: delta
     value: -5
+# 麻痹：使技能所附带的麻痹几率提高5%
+- id: effect_emblem_add_mark_mabi_chance_5
+  trigger: OnBattleStart
+  priority: 0
+  apply:
+    type: addTaggedConfigModifier
+    target: opponentPlayer
+    tag: mark_mabi_chance
+    modifierType: delta
+    value: 5
