--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -5215,7 +5215,7 @@
           percent:
             type: 'raw:number'
             value: 70
-            tags: ['skill_effect_probability']
+            tags: ['skill_effect_probability', 'mark_mabi_chance']
 
 # 如果对方麻痹，威力翻倍
 - id: effect_skill_power_2x_if_opponent_mabi
@@ -7432,7 +7432,7 @@
         percent:
           type: 'raw:number'
           value: 15
-          tags: ['skill_effect_probability']
+          tags: ['skill_effect_probability', 'mark_mabi_chance']
     trueOperator:
       type: addMark
       target: opponent
@@ -8162,3 +8162,209 @@
     stack: 150
   condition:
     type: selfUseSkill
+# 10%使对手麻痹
+- id: effect_skill_add_mark_opponent_mabi_10_percent
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_mabi
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent:
+            type: 'raw:number'
+            value: 10
+            tags: ['skill_effect_probability', 'mark_mabi_chance']
+# 50%强化自身速度1级
+- id: effect_skill_raise_spe_1_stage_50_percent
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    <<: *apply_self_statstage_+1_template
+    statType: spe
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_probability_50_percent_template
+# 对手麻痹时威力2倍
+- id: effect_skill_power_2x_if_opponent_has_mark_mabi
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: amplifyPower
+    target: usingSkillContext
+    value: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: opponentMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_mabi
+        evaluator:
+          type: exist
+# 使自身获得蓄电
+- id: effect_skill_add_mark_xudian
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_xudian
+  condition:
+    type: selfUseSkill
+# 使自身获得闪电守护
+- id: effect_skill_add_mark_shandianshoushu
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_shandianshoushu
+    stack: 150
+  condition:
+    type: selfUseSkill
+# 对手麻痹时50%使对手昏迷
+- id: effect_skill_add_mark_hunmi_50_percent_if_opponent_has_mark_mabi
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_hunmi
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: opponentMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_mabi
+        evaluator:
+          type: exist
+      - *condition_probability_50_percent_template
+# 对手麻痹时必中
+- id: effect_skill_sure_hit_if_opponent_has_mark_mabi
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: setSureHit
+    target: usingSkillContext
+    priority: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: opponentMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_mabi
+        evaluator:
+          type: exist
+# 30%使对手麻痹 若失败则给对手获得闪电烙印
+- id: effect_skill_add_mark_mabi_30_percent_or_shandianluoyin_if_fail
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: conditional
+    condition:
+      type: evaluate
+      target: self
+      evaluator:
+        type: probability
+        percent:
+          type: 'raw:number'
+          value: 30
+          tags: ['skill_effect_probability', 'mark_mabi_chance']
+    trueOperator:
+      type: addMark
+      target: opponent
+      mark:
+        type: entity:baseMark
+        value: mark_mabi
+    falseOperator:
+      type: addMark
+      target: opponent
+      mark:
+        type: entity:baseMark
+        value: mark_shandianluoyin
+  condition:
+    type: selfUseSkill
+# 对手昏迷时威力2倍
+- id: effect_skill_power_2x_if_opponent_has_mark_hunmi
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: amplifyPower
+    target: usingSkillContext
+    value: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: opponentMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_hunmi
+        evaluator:
+          type: exist
+# 10%使对手昏迷
+- id: effect_skill_add_mark_opponent_hunmi_10_percent
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_hunmi
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_probability_10_percent_template
