--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -6913,3 +6913,201 @@
   effect:
     - effect_skill_add_mark_shanghaizengjia_50
     - effect_skill_add_mark_shanghaizengjia_150
+- id: skill_leidian
+  element: Electric
+  category: Special
+  target: opponent
+  power: 60
+  rage: 5
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spd_1_stage_5_percent
+- id: skill_julei
+  element: Electric
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stage
+- id: skill_shandiandashe
+  element: Electric
+  category: Physical
+  target: opponent
+  power: 35
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  multihit: [2, 3]
+  tags: [multi_hit]
+  effect:
+    - effect_skill_add_mark_opponent_mabi_10_percent
+- id: skill_dianguanghuoshi
+  element: Electric
+  category: Physical
+  target: opponent
+  power: 50
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  priority: 1
+  effect:
+    - effect_skill_raise_spe_1_stage_50_percent
+- id: skill_leiguangshan
+  element: Electric
+  category: Special
+  target: opponent
+  power: 70
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_opponent_has_mark_mabi
+- id: skill_leiguangqiu
+  element: Electric
+  category: Special
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spd_1_stage_50_percent
+- id: skill_xudian
+  element: Electric
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_xudian
+- id: skill_tianleiji
+  element: Electric
+  category: Special
+  target: opponent
+  power: 40
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: [multi_hit]
+  multihit: [2, 3]
+  effect:
+    - effect_skill_add_mark_opponent_hunmi_10_percent
+- id: skill_shandianshoushu
+  element: Electric
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shandianshoushu
+- id: skill_shandianzhilian
+  element: Electric
+  category: Special
+  target: opponent
+  power: 75
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_hunmi_50_percent_if_opponent_has_mark_mabi
+- id: skill_shandianzhongji
+  element: Electric
+  category: Physical
+  target: opponent
+  power: 100
+  rage: 15
+  accuracy: 70
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_sure_hit_if_opponent_has_mark_mabi
+- id: skill_dianshanleiming
+  element: Electric
+  category: Climax
+  target: opponent
+  power: 45
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: [multi_hit]
+  multihit: 3
+  effect:
+    - effect_skill_add_mark_opponent_mabi_10_percent
+    - effect_skill_add_mark_hunmi_50_percent_if_opponent_has_mark_mabi
+- id: skill_shandianluoyin
+  element: Electric
+  category: Special
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_mabi_30_percent_or_shandianluoyin_if_fail
+- id: skill_shandianchongji
+  element: Electric
+  category: Physical
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_opponent_has_mark_mabi
+- id: skill_dianguangchongji
+  element: Electric
+  category: Special
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_opponent_has_mark_mabi
+- id: skill_tianleijiangling
+  element: Electric
+  category: Special
+  target: opponent
+  power: 75
+  rage: 25
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_opponent_has_mark_mabi
+    - effect_skill_power_2x_if_opponent_has_mark_hunmi
