--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -7111,3 +7111,160 @@
   effect:
     - effect_skill_power_2x_if_opponent_has_mark_mabi
     - effect_skill_power_2x_if_opponent_has_mark_hunmi
+- id: skill_xienianzhi
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_jingshencuoluan
+- id: skill_shixiduzhen
+  element: Ground
+  category: Special
+  target: opponent
+  power: 65
+  rage: 15
+  accuracy: 60
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_zhongdu
+    - effect_skill_sure_hit_opponent_jingshencuoluan
+- id: skill_shixizhiqian
+  element: Ground
+  category: Physical
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_heal_25_percent_damage_dealt_if_opponent_jingshencuoluan
+- id: skill_jingsongzhiyan
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  rage: 25
+  accuracy: 40
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_haipa
+- id: skill_podanjiaji
+  element: Ground
+  category: Physical
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_opponent_has_mark_haipa
+- id: skill_judukuosan
+  element: Ground
+  category: Special
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_damage_80_if_opponent_has_mark_zhongdu
+- id: skill_shixijuqian
+  element: Ground
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_40_if_opponent_has_mark_jingshencuoluan
+- id: skill_yanbubaoyong
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_huifu
+- id: skill_sanyanjuguangbo
+  element: Ground
+  category: Climax
+  target: opponent
+  power: 160
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spd_1_stage_20_percent
+- id: skill_shihuazhi
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  rage: 30
+  accuracy: 50
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_shihua
+- id: skill_suishizhiqian
+  element: Ground
+  category: Physical
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_crit_rate_85_if_opponent_has_mark_shihua
+- id: skill_zhimingzhiqian
+  element: Ground
+  category: Physical
+  target: opponent
+  power: 110
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_crit_rate_85_if_opponent_has_mark_zhongdu_and_haipa
+- id: skill_duomingzhiqian
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 110
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_opponent_has_mark_jingshencuoluan_and_haipa
