--- a/data/species.yaml
+++ b/data/species.yaml
@@ -5303,3 +5303,120 @@
     - mark_ability_lianji
   emblem:
     - mark_emblem_malui
+- id: pet_sanyanxie
+  num: 86
+  element: Ground
+  baseStats:
+    hp: 91
+    atk: 120
+    def: 124
+    spa: 110
+    spd: 124
+    spe: 109
+  genderRatio:
+    - 1
+    - 9
+  heightRange:
+    - 32
+    - 37
+  weightRange:
+    - 16
+    - 21
+  learnable_skills:
+    - skill_id: skill_chongzhuang
+      level: 1
+      hidden: false
+    - skill_id: skill_feishi
+      level: 5
+      hidden: false
+    - skill_id: skill_jianying
+      level: 10
+      hidden: false
+    - skill_id: skill_xienianzhi
+      level: 15
+      hidden: false
+    - skill_id: skill_shixiduzhen
+      level: 19
+      hidden: false
+    - skill_id: skill_shixizhiqian
+      level: 24
+      hidden: false
+  ability:
+    - mark_ability_shihua
+  emblem:
+    - mark_emblem_jingsong
+- id: pet_sanyanshixie
+  num: 87
+  element: Ground
+  baseStats:
+    hp: 181
+    atk: 165
+    def: 174
+    spa: 155
+    spd: 174
+    spe: 154
+  genderRatio:
+    - 1
+    - 9
+  heightRange:
+    - 55
+    - 60
+  weightRange:
+    - 63
+    - 68
+  learnable_skills:
+    - skill_id: skill_chongzhuang
+      level: 1
+      hidden: false
+    - skill_id: skill_feishi
+      level: 5
+      hidden: false
+    - skill_id: skill_jianying
+      level: 10
+      hidden: false
+    - skill_id: skill_xienianzhi
+      level: 15
+      hidden: false
+    - skill_id: skill_shixiduzhen
+      level: 19
+      hidden: false
+    - skill_id: skill_shixizhiqian
+      level: 24
+      hidden: false
+    - skill_id: skill_jingsongzhiyan
+      level: 29
+      hidden: false
+    - skill_id: skill_podanjiaji
+      level: 34
+      hidden: false
+    - skill_id: skill_jianren
+      level: 39
+      hidden: false
+    - skill_id: skill_judukuosan
+      level: 44
+      hidden: false
+    - skill_id: skill_shixijuqian
+      level: 49
+      hidden: false
+    - skill_id: skill_yanbubaoyong
+      level: 54
+      hidden: false
+    - skill_id: skill_sanyanjuguangbo
+      level: 60
+      hidden: false
+    - skill_id: skill_shihuazhi
+      level: 60
+      hidden: true
+    - skill_id: skill_suishizhiqian
+      level: 60
+      hidden: true
+    - skill_id: skill_zhimingzhiqian
+      level: 60
+      hidden: true
+    - skill_id: skill_duomingzhiqian
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_shihua
+  emblem:
+    - mark_emblem_jingsong
