--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -188,3 +188,4 @@ mark_buxieanguang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main
 mark_shandianshoushu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4012.png'
 mark_shandianluoyin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3145.png'
 mark_xudian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3144.png'
+mark_jingshencuoluan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3112.png'
