--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -591,3 +591,16 @@ skill_shandianluoyin: 'https://seer2-resource.yuuinih.com/sound/skill/08_2_003.m
 skill_shandianchongji: 'https://seer2-resource.yuuinih.com/sound/skill/08_1_003.mp3'
 skill_dianguangchongji: 'https://seer2-resource.yuuinih.com/sound/skill/08_1_002.mp3'
 skill_tianleijiangling: 'https://seer2-resource.yuuinih.com/sound/skill/08_1_001.mp3'
+skill_xienianzhi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_shixiduzhen: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_shixizhiqian: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_jingsongzhiyan: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_podanjiaji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_judukuosan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_shixijuqian: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_yanbubaoyong: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_sanyanjuguangbo: 'https://seer2-resource.yuuinih.com/sound/skill/10515.mp3'
+skill_shihuazhi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_suishizhiqian: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_zhimingzhiqian: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_duomingzhiqian: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
