--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -189,3 +189,7 @@ mark_shandianshoushu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@m
 mark_shandianluoyin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3145.png'
 mark_xudian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3144.png'
 mark_jingshencuoluan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3112.png'
+mark_huanxiang: 'https://seer2-resource.yuuinih.com/png/markImage/3124.png'
+mark_zhenshihuanxiang: 'https://seer2-resource.yuuinih.com/png/markImage/3125.png'
+mark_wanan: 'https://seer2-resource.yuuinih.com/png/markImage/3127.png'
+mark_huixin: 'https://seer2-resource.yuuinih.com/png/markImage/3110.png'
