--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -604,3 +604,20 @@ skill_shihuazhi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
 skill_suishizhiqian: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
 skill_zhimingzhiqian: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
 skill_duomingzhiqian: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_caita: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_touzhi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_jianding: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_huanxiangshijie: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_huabing: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_huanxiangzhiying: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_huaxue: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_wanan: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_huanxiangzhixing: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_xinsuo: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_baobing: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_huanxiangzhinian: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_zhenjiabinglengjiang: 'https://seer2-resource.yuuinih.com/sound/skill/10696.mp3'
+skill_buyi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_taobei: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_huawu: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_huanxiangzhiling: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
