--- a/data/mark_emblem.yaml
+++ b/data/mark_emblem.yaml
@@ -225,3 +225,8 @@
   tags: [emblem]
   effect:
     - effect_emblem_jingsongzhiyan_accuracy_boost_5_percent
+- id: mark_emblem_huashen
+  config: *emblem_config
+  tags: [emblem]
+  effect:
+    - effect_emblem_huashen_skill_rage_cost_reduce_5
