--- a/data/species.yaml
+++ b/data/species.yaml
@@ -5420,3 +5420,120 @@
     - mark_ability_shihua
   emblem:
     - mark_emblem_jingsong
+- id: pet_yilu
+  num: 124
+  element: Ice
+  baseStats:
+    hp: 89
+    atk: 128 # 78 + 50
+    spa: 123 # 73 + 50
+    def: 116 # 66 + 50
+    spd: 114 # 64 + 50
+    spe: 104 # 54 + 50
+  genderRatio:
+    - 6
+    - 4
+  heightRange:
+    - 22
+    - 27
+  weightRange:
+    - 11
+    - 16
+  learnable_skills:
+    - skill_id: skill_caita
+      level: 1
+      hidden: false
+    - skill_id: skill_touzhi
+      level: 5
+      hidden: false
+    - skill_id: skill_jianding
+      level: 10
+      hidden: false
+    - skill_id: skill_huanxiangshijie
+      level: 14
+      hidden: false
+    - skill_id: skill_huabing
+      level: 19
+      hidden: false
+    - skill_id: skill_huanxiangzhiying
+      level: 24
+      hidden: false
+  ability:
+    - mark_ability_huanxiang
+  emblem:
+    - mark_emblem_huashen
+- id: pet_yiluxin
+  num: 125
+  element: Ice
+  baseStats:
+    hp: 179
+    atk: 178 # 128 + 50
+    spa: 173 # 123 + 50
+    def: 161 # 111 + 50
+    spd: 159 # 109 + 50
+    spe: 149 # 99 + 50
+  genderRatio:
+    - 6
+    - 4
+  heightRange:
+    - 61
+    - 66
+  weightRange:
+    - 53
+    - 58
+  learnable_skills:
+    - skill_id: skill_caita
+      level: 1
+      hidden: false
+    - skill_id: skill_touzhi
+      level: 5
+      hidden: false
+    - skill_id: skill_jianding
+      level: 10
+      hidden: false
+    - skill_id: skill_huanxiangshijie
+      level: 14
+      hidden: false
+    - skill_id: skill_huabing
+      level: 19
+      hidden: false
+    - skill_id: skill_huanxiangzhiying
+      level: 24
+      hidden: false
+    - skill_id: skill_huaxue
+      level: 29
+      hidden: false
+    - skill_id: skill_wanan
+      level: 34
+      hidden: false
+    - skill_id: skill_huanxiangzhixing
+      level: 39
+      hidden: false
+    - skill_id: skill_xinsuo
+      level: 44
+      hidden: false
+    - skill_id: skill_baobing
+      level: 49
+      hidden: false
+    - skill_id: skill_huanxiangzhinian
+      level: 54
+      hidden: false
+    - skill_id: skill_zhenjiabinglengjiang
+      level: 60
+      hidden: true
+    - skill_id: skill_buyi
+      level: 60
+      hidden: true
+    - skill_id: skill_taobei
+      level: 60
+      hidden: true
+    - skill_id: skill_huawu
+      level: 60
+      hidden: true
+    - skill_id: skill_huanxiangzhiling
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_huanxiang
+  emblem:
+    - mark_emblem_huashen
